--- a/public/css/google.css
+++ b/public/css/google.css
@@ -42,3 +42,45 @@ body {
 .letter:nth-child(6) {
     color: #ea4335;
 }
+
+
+
+
+
+
+
+
+
+
+
+
+body {
+    background: #EDECEC;
+}
+.tab-content {
+    text-align: left;
+    padding: 20px
+}
+.jumbotron p {
+    //margin-bottom: 15px;
+    font-size: 15px !important;
+    //font-weight: 200;
+    text-align: left;
+}
+.card {
+    background: #FFF none repeat scroll 0% 0%;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.3);
+    margin-bottom: 30px;
+    width : 1000px;
+    word-wrap: break-word !important;
+    line-height: 0.7;
+}
+.card legend{
+    display:inline-block;
+    width:900px;
+    white-space: nowrap;
+    overflow:hidden !important;
+    text-overflow: ellipsis;
+    line-height: 1.5;
+    margin-bottom: 10px;
+}
